Se modifica partes que estaban ocultas.

--- a/multimedia2.html
+++ b/multimedia2.html
@@ -92,19 +92,19 @@
 
 
 	<!--contenido -->
-	<div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="height: 90%; position: absolute;">
+	<div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 100px">
 
 		<div class="container">
 			<h1 class="text-center">Metodologías basadas en Planificación</h1>
 		</div>
 
-		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 50px;">
+		<div class="col-sm-10  col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 container-fluid" style="padding-top: 30px;">
 
 			<iframe width="100%" height="420" src="https://www.youtube.com/embed/BREdok-7gWE?controls=0"></iframe>
 
 		</div>
 
-		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 40px">
+		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 30px">
 			<p class="text-justify">
 				<b>Metodologías Basadas en Planificación: </b>Brinda información sobre 5 metodologías llevadas a la practica según la
 				planeación, su implementación en un Proyecto Informático y un cuadro comparativo con cada uno de ellos según su
