--- a/pagina3.html
+++ b/pagina3.html
@@ -92,19 +92,19 @@
 
 
 	<!--contenido -->
-	<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="height: 90%; position: absolute;">
+	<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 100px">
 
 		<div class="container">
 			<h1 class="text-center">Gestión de Proyectos Informáticos</h1>
 		</div>
 
-		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 50px;">
+		<div class="col-sm-10  col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 container-fluid" style="padding-top: 30px;">
 
 			<iframe width="100%" height="420" src="https://www.youtube.com/embed/G3EadoqCyCU?controls=0"></iframe>
 
 		</div>
 
-		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 40px">
+		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 30px">
 			<p class="text-justify">
 				Conceptualización y Fases de la Gestión de Proyectos Informáticos: El video le permitirá definir el concepto de
 				Gestion de Proyectos Informáticos, de igual manera definir cada uno de los procesos presentes en la vida del Ciclo
