--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="https://www.unad.edu.co" target="_blanck"> <span class="glyphicon glyphicon-globe"></span>
-                            UNAD </a></li>
-
+                    <li><a href="https://www.unad.edu.co" target="_blanck"> <span class="glyphicon glyphicon-globe"></span> UNAD </a></li>
                 </ul>
             </div>
         </div>
@@ -92,7 +90,7 @@
 
 
     <!--contenido -->
-    <div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="height: 90%; position: absolute;">
+    <div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 70px">
 
         <div class="jumbotron">
             <div class="container">
@@ -132,13 +130,13 @@
 
 
     <div class="footer navbar-fixed-bottom" id="footer">
-        <!-- Bootstrap core JavaScript
+          <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
 
-        <div class="text-center">
+        <div class="text-center "  >
             <p><b> Universidad Nacional Abierta y a Distancia - UNAD - Diseño de sitios web</b></p>
             <p><b> Todos los derechos reservados - 2018</b></p>
         </div>
