add widget twitter - counter visitas + lecturas 3,4 y 5, ajustes de interfaz

--- a/pagina5.html
+++ b/pagina5.html
@@ -50,6 +50,9 @@
 						<ul class="dropdown-menu">
 							<li><a href="pagina2.html">Lectura 1</a></li>
 							<li><a href="lectura2.html">Lectura 2</a></li>
+							<li><a href="lectura3.html">Lectura 3</a></li>
+							<li><a href="lectura4.html">Lectura 4</a></li>
+							<li><a href="lectura5.html">Lectura 5</a></li>
 						</ul>
 
 					</li>
@@ -89,10 +92,8 @@
 		</div>
 	</nav>
 
-
-
 	<!--contenido -->
-	<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="height: 90%; position: absolute;">
+	<div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 150px">
 
 		<div class="container">
 			<h1 class="text-center">Autora OVI GESTIÓN DE PROYECTOS INFORMÁTICOS</h1>
@@ -105,26 +106,31 @@
 		<div class="col-sm-8  col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 container-fluid" style="padding-top: 40px">
 			<h4>Lina Mogollón</h4>
 			<p class="text-justify">
-					Código del Programa: 301122
+				Código del Programa: 301122
 			</p>
 			<p class="text-justify">
-					Correo electrónico: linamogollonc@gmail.com
+				Correo electrónico: linamogollonc@gmail.com
 			</p>
 		</div>
 
 	</div>
 
-	<div class="footer navbar-fixed-bottom" id="footer">
+	<div class="footer navbar-fixed-bottom" id="footer" style="height: 90px;">
 		<!-- Bootstrap core JavaScript
-    ================================================== -->
+	  ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 
-		<div class="text-center">
+		<div class="text-center ">
 			<p><b> Universidad Nacional Abierta y a Distancia - UNAD - Diseño de sitios web</b></p>
-			<p><b> Todos los derechos reservados - 2018</b></p>
+			<p><b> Todos los derechos reservados - 2018 </b> </p>
+			<p>
+				<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=linamogollonc.github.io/ovidisenositiosweb&digit=style/plain/10/&reloads=0"
+					 alt="" title=""></a>
+			</p>
 		</div>
+		<div class="clearfix"></div>
 	</div>
 
 </body>
