--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
                         <ul class="dropdown-menu">
                             <li><a href="pagina2.html">Lectura 1</a></li>
                             <li><a href="lectura2.html">Lectura 2</a></li>
+                            <li><a href="lectura3.html">Lectura 3</a></li>
+                            <li><a href="lectura4.html">Lectura 4</a></li>
+                            <li><a href="lectura5.html">Lectura 5</a></li>
                         </ul>
-
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" aria-expanded="false" href="#" data-toggle="dropdown">
@@ -81,7 +83,8 @@
                         </ul>
                     </li>
 
-                    <li><a href="https://www.unad.edu.co" target="_blanck"> <span class="glyphicon glyphicon-globe"></span> UNAD </a></li>
+                    <li><a href="https://www.unad.edu.co" target="_blanck"> <span class="glyphicon glyphicon-globe"></span>
+                            UNAD </a></li>
                 </ul>
             </div>
         </div>
@@ -90,21 +93,27 @@
 
 
     <!--contenido -->
-    <div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 70px">
+    <div class="col-sm-9 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2 main " style="padding-bottom: 150px">
 
         <div class="jumbotron">
-            <div class="container">
+            <div class="container col-sm-8  col-md-8 col-lg-8 " style="float: right;">
                 <h1>Bienvenidos</h1>
                 <p>OVI Diseño de Gestion de Proyectos Informáticos</p>
             </div>
+            <div style="float: left;" class="col-sm-4  col-md-4 col-lg-4">
+                <img src="img/img1.jpg" alt="Proyectos Informáticos" class="img-rounded" />
+                <p>
+                    <a href="https://userscontent2.emaze.com/images/95731063-ef56-456d-858b-bf1ad8ac374a/9d895dc746818fb94d158712bd98ea5c.jpg"
+                        target="_blanck" style="font-size: 0.7em">
+                        Visitar la fuente de la imagen
+                    </a>
+                </p>
+            </div>
+            <div class="clearfix"></div>
         </div>
 
-        <div style="float: left;" class="col-sm-4  col-md-4 col-lg-4">
-            <img src="img/img1.jpg" alt="Proyectos Informáticos" class="img-rounded" />
-            <span style="font-size: 0.8em">https://userscontent2.emaze.com/images/95731063-ef56-456d-858b-bf1ad8ac374a/9d895dc746818fb94d158712bd98ea5c.jpg</span>	
-        </div>
 
-        <div class="col-sm-8  col-md-8 col-lg-8" style="float: right;">
+        <div class="col-sm-8  col-md-8 col-lg-8" style="float: left;">
             <h2>Objetivos</h2>
 
             <p class="text-justify">
@@ -124,22 +133,32 @@
 
         </div>
 
+        <div style="float: right;" class="col-sm-4  col-md-4 col-lg-4">
+            <a class="twitter-timeline" data-lang="es" data-height="500" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets
+                by UniversidadUNAD</a>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
+        </div>
+
+        <div class="clearfix"></div>
     </div>
 
-
-
-    <div class="footer navbar-fixed-bottom" id="footer">
-          <!-- Bootstrap core JavaScript
+    <div class="footer navbar-fixed-bottom" id="footer" style="height: 90px;">
+        <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
 
-        <div class="text-center "  >
+        <div class="text-center ">
             <p><b> Universidad Nacional Abierta y a Distancia - UNAD - Diseño de sitios web</b></p>
-            <p><b> Todos los derechos reservados - 2018</b></p>
+            <p><b> Todos los derechos reservados - 2018 </b> </p>
+            <p>
+                <a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=linamogollonc.github.io/ovidisenositiosweb&digit=style/plain/10/&reloads=0"
+                        alt="" title=""></a>
+            </p>
         </div>
+        <div class="clearfix"></div>
     </div>
 
 
