Fix counter https

--- a/actividad3y4.html
+++ b/actividad3y4.html
@@ -137,7 +137,7 @@
 			<p><b> Universidad Nacional Abierta y a Distancia - UNAD - Diseño de sitios web</b></p>
 			<p><b> Todos los derechos reservados - 2018 </b> </p>
 			<p>
-				<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=linamogollonc.github.io/ovidisenositiosweb&digit=style/plain/10/&reloads=0"
+				<a href="https://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=linamogollonc.github.io/ovidisenositiosweb&digit=style/plain/10/&reloads=0"
 					 alt="" title=""></a>
 			</p>
 		</div>
