--- a/pagina3.html
+++ b/pagina3.html
@@ -120,9 +120,9 @@
 
 
 
-	<div class="footer navbar-fixed-bottom" id="footer" style="height: 90px;">
+	<div class="footer navbar-fixed-bottom" id="footer" style="height: 100px;">
 		<!-- Bootstrap core JavaScript
-	  ================================================== -->
+			================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
@@ -131,8 +131,8 @@
 			<p><b> Universidad Nacional Abierta y a Distancia - UNAD - Diseño de sitios web</b></p>
 			<p><b> Todos los derechos reservados - 2018 </b> </p>
 			<p>
-				<a href="https://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=linamogollonc.github.io/ovidisenositiosweb&digit=style/plain/10/&reloads=0"
-					 alt="" title=""></a>
+				<a href="https://www.freecounterstat.com" title="hit counter"><img src="https://counter5.wheredoyoucomefrom.ovh/private/freecounterstat.php?c=23cz16ubqkflmud3x6eq5jawqke4f4z5"
+					 title="hit counter" alt="hit counter"></a>
 			</p>
 		</div>
 		<div class="clearfix"></div>
